# gladius-contracts

./: .env  .env.example  .gitbook.yaml  .gitignore  CF_invokeGladiusTransaction.ts  CF_signupGladiusParentAndStudent.ts  README.md  config.json  index.ts  package-lock.json  package.json  scf-23.md  testnet_keys.json  testnet_keys.txt  tsconfig.json
contracts/: Makefile  README.md
contracts/gladius-coin-emitter/: Cargo.toml
contracts/gladius-coin-emitter/src/: error.rs  event.rs  lib.rs  storage_types.rs  test.rs
contracts/gladius-coin-emitter/src/gladius_coin/: admin.rs  allowance.rs  balance.rs  contract.rs  mod.rs  storage_types.rs  test.rs  total_supply.rs
contracts/gladius-coin-emitter/src/test/: gladius_coin.rs  initialize.rs  unwrap.rs  wrap.rs
docs/: 2_GladiusCoinEmitterContract.md  2_SmartContracts.md  3_GladiusSubscriptionsContract.md  4_FutureWork.md  4_GladiusNFTContract.md  5_StellarAnchorsAndPayments.md  GeneralConcepts.md  README.md  SUMMARY.md  SmartContracts.md
public/: deployments.json
scripts/: club_admin_add_student_to_group_single.ts  club_admin_add_to_group_and_reward_firebase.ts  club_admin_distribute_firebase.ts  club_admin_distribute_single.ts  club_check_student_balance.ts  club_nft_supply_firebase.ts  club_parent_sign.ts  club_parent_signup.ts  contractsfunction.ts  deploy.sh  deploy_token.ts  examples.js  examples.ts  exec_image_to_pinata.js  firebase-admin.ts  firebaseAdminSetup.ts  get_balance.ts  image_to_pinata.js  image_to_pinata.ts  mint.sh  mint_token.ts  quickstart.sh  run.sh  setup.sh  setup.ts  test.ts  test_mint_nft.ts  (+1 more)
(+60 files in other folders)
