[package]
name = "gladius-coin-emitter"
description = "Gladius Coin Emitter"
version = "0.0.1"
edition = "2021"
rust-version = "1.74.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "20.4.0" }
soroban-token-sdk = { version = "20.4.0" }

[dev_dependencies]
soroban-sdk = { version = "20.4.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
